<resources>
    <string name="authors">Авторы</string>
    <string name="big_nalog">"Пришло время выплатить главный налог.
Налог выплачивается каждые десять лет.
На сегодня сумма налога составляет:"</string>
    <string name="empty">пусто</string>
    <string name="app_name">SK35</string>
    <string name="start_game">Start</string>
    <string name="open_info_build">openBuildInfo</string>
    <string name="btn_next_day">NextDay</string>
    <string name="btn_next_week">nextWeek</string>
    <string name="btn_next_mounth">nextMounth</string>
    <string name="line_top">line_top</string>
    <string name="earth_name">Участки земли</string>
    <string name="icon_resource">iconResource</string>
    <string name="test_string">Выберите постройку</string>
    <string name="buy_build">Buy</string>
    <string name="one_number">1</string>
    <string name="two_number">2</string>
    <string name="three_number">3</string>
    <string name="four_number">4</string>
    <string name="five_number">5</string>
    <string name="six_number">6</string>
    <string name="seven_number">7</string>
    <string name="eight_number">8</string>
    <string name="nine_number">9</string>
    <string name="zero_number">0</string>
    <string name="cl">Cl</string>
    <string name="back_number">-></string>
    <string name="string1_bank">Заем под 7% ежемесячно</string>
    <string name="string3_bank">Макс. сумма займа</string>
    <string name="string1_buy">Покупка ресурсов</string>
    <string name="string2_buy_gold">Золото цена 1000</string>
    <string name="string3_buy_buy">Купить</string>
    <string name="string4_buy_za">за</string>
    <string name="string5_buy">Недостача ресурса</string>
    <string name="string7_buy">в год:</string>
    <string name="string6_buy">В наличии: 1000000000</string>
    <string name="string6_buy_close">Закрыть</string>
    <string name="image_resource">resource</string>
    <string name="open_gl">OpenGL 1.0 ES</string>
    <string name="string1_table">Цены на ресурсы</string>
    <string name="string2_table">Ресурсы</string>
    <string name="string3_table">Продажа</string>
    <string name="string4_table">Покупка</string>
    <string name="string5_table">Прогноз</string>
    <string name="star_activ">star</string>
    <string name="dialog_nalog1">На землю:</string>
    <string name="dialog_nalog2">С продажи(2%):</string>
    <string name="dialog_nalog3">С покупки(1%):</string>
    <string name="dialog_nalog4">Льгота:</string>
    <string name="dialog_nalog5">Итого:</string>
    <string name="pop_view">pop_view</string>
    <string name="btn_buy">btn_buy</string>
    <string name="btn_close">close</string>
    <string name="dialog_birthrate1">Прирост в год:</string>
    <string name="dialog_birthrate2">Лавка рабов</string>
    <string name="score_profit">Добыто</string>
    <string name="help_string1">Сахалинская колония – экономическая пошаговая стратегия. Игра представляет собой поле размером 147 на 98 клеток. Каждая клетка содержит определенный ресурс, всего их восемь: земля, фундамент, уголь, вода, золото, дерево, нефть, металл. Размещайте на соответствующих ресурсах постройки для получения прибыли. Каждый год вам необходимо платить налоги, а раз в десять лет выплачивать главный налог (таблица главных налогов представлена в конце). Ваша цель заработать как можно больше денег, чтобы выплатить все главные налоги.</string>
    <string name="help_string2">КАК ИГРАТЬ</string>
    <string name="help_string3">В начале игры выберете на левой панели значок:</string>
    <string name="help_string4">(Информация о панели управления и постройках представлена в следующих разделах) В столбце “продажа” показана сумма которую вы получите за каждую единицу добытого вами ресурса. Стрелочки указывают выше или ниже средней цены торгуется ресурс. Вам желательно выбрать такой ресурс который торгуется по цене выше средней, и цена на который в будущем будет выше средней (это указано в столбце “Прогноз”). Далее нажмите на значок кирпича в центре снизу игрового экрана и купите постройку которая производит нужный вам ресурс. Ну и для того чтобы процесс пошел в правой панели игрового экрана под радаром вы увидите три иконки, означающие прожить день, неделю или месяц. Старайтесь не выбирать в начале игры постройки, которые зависят от других ресурсов. Так, например, при хорошей цене на рыбу вы можете приобрести «Рыбный промысел» который для работы требует дерево. В начале игры дерево вам придется закупать и может случится так что цена на дерево (столбец покупки) будет очень высока (всегда выше чем цена по которой вы можете ресурс продать), а цена продажи может через пару лет резко упасть и тогда ваша постройка будет приносить убыток. Каждая постройка требует определенное количество рабочих поэтому следите за количеством мест для проживания и своевременно стройте дома. Старайтесь вначале наладить производство нефти, а затем металла и дерева - покупать ресурсы очень дорого. Прирост рабов вы можете увеличить за деньги нажав на значок левой панели:</string>
    <string name="help_string5">Вы можете (и должны!) спекулировать купив ресурс, цена продажи на который в будущем поднимется выше чем цена покупки сегодня. Соответствующее сообщение выплывет в правом верхнем углу в случае возникновения такой возможности. Берите деньги в кредит перед совершением спекуляции для получения еще большей прибыли. Совет – не продавайте все ресурсы которые необходимы другим постройкам даже если вы их добываете больше чем тратите. Может случиться так что постройка которая требует ресурс запросит его раньше, чем та, которая производит и тогда при нехватке ресурса она не будет работать хотя добывается его больше чем тратится. В окне продаж выставляется автоматически количество ресурса которое имеется минус количество, которое требуется в год, конечно вы можете сами определить сколько продать того или иного ресурса.</string>
    <string name="help_string6">ПОСТРОЙКИ</string>
    <string name="help_string7">Всего в игре 30 построек каждая постройка строится на определённом участке с ресурсом определенное время, имеет свой жизненный цикл, время работы, количество необходимых людей для работы, прибыль и расход. Для того чтобы увидеть информацию о постройке кликните на красный кирпич в нижнем центре игрового экрана, а затем нужную вам постройку и при необходимости нажмите кнопку «построить» для начала строительства на выбранных участках. На каждой купленной постройке могут появляться следующие значки:</string>
    <string name="help_string35">Указывает что объект строится.</string>
    <string name="help_string8">Указывает что не хватает ресурсов для производства (постройка не будет давать прибыли, а люди не будут ходить на работу при этом срок службы постройки будет так – же уменьшаться) если вы не хотите, чтобы срок службы постройки уменьшался, нажмите на левой панели значок замка:</string>
    <string name="help_string9">На всех выделенных постройках появится иконка замка и они работать не будут.</string>
    <string name="help_string10">Значок означает что сейчас не сезон для работы, в это время постройка не будет тратить ресурсов и людей, а срок службы будет сокращаться.</string>
    <string name="help_string11">Значок означает что не хватает людей, и постройка так же не будет работать.</string>
    <string name="help_string12">Значок появляется если срок службы постройки меньше 100 дней, вам необходимо отремонтировать постройку иначе она разрушится.</string>
    <string name="help_string13">Значок означает что здание улучшено, при этом оно будет приносить и тратить в десять раз больше ресурсов чем обычно.</string>
    <string name="help_string14">"
Город — это особый тип постройки его можно размещать только на фундаменте. Всего таких площадок 6. Каждый город обслуживает квадрат 49 на 49 клеток в центре которого он находится. Таким образом у вас образуется зона доступности, за пределами которой вы не сможете выделять участки, а значит и строить."</string>
    <string name="help_string15">УПРАВЛЕНИЕ</string>
    <string name="help_string16">Для перемещения по карте водите по экрану одним пальцем в нужном направлении или же кликните в нужную точку на радаре расположенном в правом верхнем углу. Растягивайте и сжимайте двумя пальцами если хотите, чтобы сработал зум. При задерживании пальца на одном месте больше 0.3 секунд сработает режим выделения, карта двигаться не будет, а постройки по которым вы проводите будут выделяться пока вы не отпустите палец при этом после того как вы отпустили палец вы можете протянуть карту и зажать его еще раз, выделенные постройки не сбросятся, а выделение продолжится. Чтобы снять выделение кликните на любом участке. Двойной щелчок по ресурсу выделит все ресурсы на карте одного типа находящегося в зоне доступности. Двойной щелчок по строению выделит все строения одного типа. Так, например, у вас есть определенное количество ферм, разбросанных по всей карте некоторые из которых закрыты, при двойном щелчке на закрытой ферме выделятся только закрытые, и наоборот.</string>
    <string name="help_string17">ЛЕВАЯ ПАНЕЛЬ УПРАВЛЕНИЯ</string>
    <string name="help_string18">Перемещает вас к строению с самым низким сроком службы.</string>
    <string name="help_string19">Ремонтирует все выделенные строения.</string>
    <string name="help_string20">Повышает уровень — это значит, что с вашего счета снимут деньги размером в 30 раз превышающую стоимость постройки, которую вы улучшаете при этом показатели такие как прибыль расход и количество человек, требующихся для работы увеличится в 10 раз. Срок службы не изменится.</string>
    <string name="help_string21">Закрывает выделенные постройки.</string>
    <string name="help_string22">Разрушает выделенные постройки при этом возвращается 10 процентов стоимости всех разрушаемых построек.</string>
    <string name="help_string23">Улучшает землю это увеличит срок службы постройки, построенной на такой земле в 1.5 раза и уменьшит срок строительства в 2 раза. При этом если улучшается земля на которой уже находится постройка, то цена улучшения увеличивается в 3 раза (45 000 вместо 15 000). В верхней панели при клике на постройку или участок вы увидите в начале строки знак «+» обозначающий что участок улучшен. Так же в правой панели на против значка «+» количество построек увеличится на 1.</string>
    <string name="help_string24">Выкупает землю. Каждый год вы платите налоги за каждый участок на котором находится постройка в размере 2 000. Выкупив землю вы не будете платить за неё. Стоимость выкупа 50 000. В верхней панели при клике на постройку или участок вы увидите в начале строки знак «$» обозначающий что участок куплен. Так же в правой панели на против значка «$» количество построек увеличится на 1.</string>
    <string name="help_string25">Открывает окно покупок ресурсов. Вам будет автоматически предложено купить столько ресурса сколько его требуется в год иначе столько на сколько у вас хватает средств.</string>
    <string name="help_string26">Открывает окно продаж ресурсов. Вам будет автоматически предложено продать общее количество ресурса минус количество, требуемое в год для работы построек.</string>
    <string name="help_string27">В банке вы можете брать деньги под 7 процентов, при этом сумма долга возрастает первого числа каждого следующего месяца(но не меньше чем на 1), поэтому старайтесь брать в долг в первых числах месяца. Максимальная сумма которую вы можете взять равна главному налогу, который предстоит выплатить, деленному на 8, но не более чем 2 000 000 000 т.е. если вам необходимо выплатить главный налог 1 024 000 значит максимально можно взять 1 024 000 / 8 = 128 000. При превышении лимита вы не сможете играть дальше пока не заплатите.</string>
</resources>