<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold|italic" android:textColor="#ff0000ff" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_five_dp" android:text="@string/string1_buy" />
    <ImageView android:id="@id/line_blue" android:layout_width="fill_parent" android:layout_height="4.0dip" android:src="@drawable/line_blue" android:scaleType="fitXY" android:contentDescription="@string/icon_resource" />
    <LinearLayout android:orientation="horizontal" android:id="@id/layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/ramka" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.33">
            <TextView android:textSize="@dimen/string_cost" android:textColor="#ffff0000" android:layout_gravity="center" android:id="@id/resource_cost" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_ten_dp" android:text="@string/string2_buy_gold" />
            <ImageButton android:textColor="#ffff0000" android:id="@id/btn_buy" android:background="@drawable/button_up_buy" android:layout_width="100.0dip" android:layout_height="40.0dip" android:text="@string/string3_buy_buy" android:contentDescription="@string/btn_buy" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="center" android:id="@id/text_resource_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_number" />
            <TextView android:textColor="#ffff0000" android:layout_gravity="center" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string4_buy_za" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:layout_gravity="center" android:id="@id/text_money_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_number" />
            <TextView android:textColor="#ffff0000" android:layout_gravity="center" android:id="@id/loss_resource" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string5_buy" />
            <TextView android:textColor="#ffff0000" android:id="@id/text_year" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string7_buy" />
            <TextView android:textColor="#ffff0000" android:layout_gravity="center" android:id="@id/text_loss" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_number" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.33">
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/btn_one" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/one_number" style="@style/AppTheme" />
                <Button android:id="@id/btn_two" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/two_number" style="@style/AppTheme" />
                <Button android:id="@id/btn_three" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/three_number" style="@style/AppTheme" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/btn_four" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/four_number" style="@style/AppTheme" />
                <Button android:id="@id/btn_five" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/five_number" style="@style/AppTheme" />
                <Button android:id="@id/btn_six" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/six_number" style="@style/AppTheme" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/btn_seven" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/seven_number" style="@style/AppTheme" />
                <Button android:id="@id/btn_eight" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/eight_number" style="@style/AppTheme" />
                <Button android:id="@id/btn_nine" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/nine_number" style="@style/AppTheme" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/btn_clear" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/cl" style="@style/AppTheme" />
                <Button android:id="@id/btn_zero" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/zero_number" style="@style/AppTheme" />
                <Button android:id="@id/btn_back" android:background="@drawable/btn_number_up" android:layout_width="@dimen/btn_size2" android:layout_height="@dimen/btn_size2" android:text="@string/back_number" style="@style/AppTheme" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.33">
            <ImageButton android:id="@id/close" android:background="@drawable/btn_close" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:contentDescription="@string/btn_close" />
            <ListView android:id="@id/list_resources" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_above="@id/close" android:layout_below="@id/imageView2" android:layout_alignParentLeft="true" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffffffff" android:gravity="center" android:id="@id/money" android:background="@drawable/background_resource_up" android:layout_width="fill_parent" android:layout_height="32.0dip" android:text="@string/zero_number" android:drawableRight="@drawable/money_mark" />
            <ImageView android:id="@id/imageView2" android:layout_width="wrap_content" android:layout_height="2.0dip" android:src="@drawable/line" android:scaleType="fitXY" android:layout_below="@id/money" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:contentDescription="@string/line_top" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>