<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold|italic" android:textColor="#ff0000ff" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_five_dp" android:text="@string/string1_table" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
    <ImageView android:id="@id/line_blue" android:layout_width="fill_parent" android:layout_height="4.0dip" android:src="@drawable/line_blue" android:scaleType="fitXY" android:layout_below="@id/title" android:contentDescription="@string/icon_resource" />
    <LinearLayout android:id="@id/layout_cap" android:background="#ffe6ea93" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/line_blue">
        <com.vorobiev.sk.MyTextView android:textStyle="bold" android:textColor="#ff0000ff" android:gravity="center" android:id="@id/textView1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/string2_table" android:layout_weight="1.0" />
        <com.vorobiev.sk.MyTextView android:textStyle="bold" android:textColor="#ff0000ff" android:gravity="center" android:id="@id/textView2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/string3_table" android:layout_weight="1.0" />
        <com.vorobiev.sk.MyTextView android:textStyle="bold" android:textColor="#ff0000ff" android:gravity="center" android:id="@id/textView3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/string4_table" android:layout_weight="1.0" />
        <com.vorobiev.sk.MyTextView android:textStyle="bold" android:textColor="#ff0000ff" android:gravity="center" android:id="@id/text_prognos" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/string5_table" android:layout_weight="1.0" />
    </LinearLayout>
    <ScrollView android:id="@id/scrollView1" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/line_blue_two" android:layout_below="@id/layout_cap">
        <LinearLayout android:orientation="vertical" android:id="@id/layout_scroll" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </ScrollView>
    <ImageView android:id="@id/line_blue_two" android:layout_width="fill_parent" android:layout_height="4.0dip" android:src="@drawable/line_blue" android:scaleType="fitXY" android:layout_above="@id/cellar" android:contentDescription="@string/icon_resource" />
    <LinearLayout android:orientation="horizontal" android:id="@id/cellar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:gravity="center" android:id="@id/btn_close_table" android:background="@drawable/btn_close" android:layout_width="wrap_content" android:layout_height="40.0dip" style="?android:attr/buttonStyleSmall" />
    </LinearLayout>
</RelativeLayout>