<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="left" android:layout_gravity="center_vertical" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_bank_dialog" android:text="@string/dialog_nalog1" android:layout_weight="1.0" />
        <TextView android:gravity="right" android:layout_gravity="center_vertical" android:id="@id/earth_nalog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_bank_dialog" android:layout_marginRight="@dimen/margin_two_dp" android:layout_weight="1.0" />
    </LinearLayout>
    <ImageView android:id="@id/ImageView02" android:layout_width="fill_parent" android:layout_height="1.0px" android:src="@drawable/line_grey" android:scaleType="fitXY" android:contentDescription="@string/empty" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="left" android:layout_gravity="center_vertical" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_bank_dialog" android:text="@string/dialog_nalog2" android:layout_weight="1.0" />
        <TextView android:gravity="right" android:layout_gravity="center_vertical" android:id="@id/sell_nalog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_bank_dialog" android:layout_weight="1.0" />
    </LinearLayout>
    <ImageView android:id="@id/ImageView01" android:layout_width="fill_parent" android:layout_height="1.0px" android:src="@drawable/line_grey" android:scaleType="fitXY" android:contentDescription="@string/empty" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="left" android:layout_gravity="center_vertical" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_bank_dialog" android:text="@string/dialog_nalog3" android:layout_weight="1.0" />
        <TextView android:gravity="right" android:layout_gravity="center_vertical" android:id="@id/buy_nalog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_bank_dialog" android:layout_weight="1.0" />
    </LinearLayout>
    <ImageView android:id="@id/imageView2" android:layout_width="fill_parent" android:layout_height="1.0px" android:src="@drawable/line_grey" android:scaleType="fitXY" android:contentDescription="@string/empty" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="left" android:layout_gravity="center_vertical" android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_bank_dialog" android:text="@string/dialog_nalog4" android:layout_weight="1.0" />
        <TextView android:gravity="right" android:layout_gravity="center_vertical" android:id="@id/exemption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/margin_bank_dialog" android:layout_weight="1.0" />
    </LinearLayout>
    <ImageView android:id="@id/imageView1" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="@dimen/margin_two_dp" android:layout_marginBottom="@dimen/margin_two_dp" android:src="@android:drawable/bottom_bar" android:scaleType="fitXY" android:contentDescription="@string/line_top" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="left" android:layout_gravity="center_vertical" android:id="@id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_bank_dialog" android:text="@string/dialog_nalog5" android:layout_weight="1.0" />
        <TextView android:textColor="#ffff0000" android:gravity="right" android:layout_gravity="center_vertical" android:id="@id/summ_nalog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_bank_dialog" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>